<resources>
    <string name="app_name">Triggertrap</string>
    <string name="action_settings">Settings</string>
    <string name="nav_drawer_open">Triggertrap</string>
    <string name="unknown">Unknown</string>
    <string name="welcome">Welcome</string>
    <string name="cable_release_modes">Cable Release Modes</string>
    <string name="timelapse_modes">Timelapse Modes</string>
    <string name="sound_mode">Sound Modes</string>
    <string name="hdr_modes">HDR Modes</string>
    <string name="remote_triggers">Remote Triggers</string>
    <string name="output_settings">Output Settings</string>
    <string name="calculators">Calculators</string>
    <string name="getting_started">Getting Started</string>
    <string name="buy_dongle">Buy Dongle</string>
    <string name="simple_cable_release">Simple Cable Release</string>
    <string name="press_and_hold">Press and Hold</string>
    <string name="press_to_lock">Press and Lock</string>
    <string name="timed_release">Timed Release</string>
    <string name="timelapse">Timelapse</string>
    <string name="timewarp">TimeWarp</string>
    <string name="distancelapse">DistanceLapse</string>
    <string name="star_trail">Star Trail</string>
    <string name="bramping">Bramping</string>
    <string name="sound_sensor">Sound Sensor</string>
    <string name="le_hdr">LE HDR</string>
    <string name="le_hdr_timelapse">LE HDR Timelapse</string>
    <string name="wifi_slave">Wi-Fi Slave</string>
    <string name="pebble">Pebble</string>
    <string name="wifi_master">Wi-Fi Master</string>
    <string name="sunrise_sunset">Solar Calculator</string>
    <string name="nd_calculator">ND Calculator</string>
    <string name="a_quick_guide">A quick guide</string>
    <string name="find_out_where_to_get_one">Where to get one</string>
    <string name="tap_the_button_to_take_a_picture">Tap the button to take a picture</string>
    <string name="touch_to_start_release_to_stop">Touch to start, release to stop</string>
    <string name="touch_to_start_touch_to_stop">Touch to start. Touch to stop</string>
    <string name="choose_your_shutter_speed">Choose your shutter speed</string>
    <string name="travel_through_time">Travel through time</string>
    <string name="timelapse_with_acceleration">Timelapse with acceleration</string>
    <string name="perfect_for_roadtrips">Perfect for roadtrips</string>
    <string name="extreme_exposure_control">Extreme exposure control</string>
    <string name="bulb_ramping_timelapse">Bulb ramping timelapse</string>
    <string name="clap_whistle_or_tap">Clap, whistle or tap</string>
    <string name="long_exposure_hdr_sets">Long exposure HDR sets</string>
    <string name="long_exposure_hdr_timelapse">Long exposure HDR timelapse</string>
    <string name="hdr_error_title">HDR settings Error.</string>
    <string name="hdr_error">Your HDR settings have generated invalid results. Try increasing your middle exposure or decreasing the number of exposures and EV step.</string>
    <string name="trigger_remotely">Trigger remotely</string>
    <string name="trigger_with_your_pebble">Trigger with your Pebble</string>
    <string name="determine_sunrise_sunset">Sunrise and Sunset Calculator</string>
    <string name="determine_nd">Neutral Density Filter Calculator</string>
    <string name="take_control">Take control</string>
    <string name="running_press_to_start_and_stop">Running press and lock</string>
    <string name="running_timed">Running Timed</string>
    <string name="running_timelapse">Running Timelapse</string>
    <string name="running_timewarp">Running TimeWarp</string>
    <string name="running_star_trail">Running Star trail</string>
    <string name="running_bramping">Running Bramping</string>
    <string name="running_sound_trigger">Running Sound trigger</string>
    <string name="running_distance_lapse">Running DistanceLapse</string>
    <string name="running_hdr">Running HDR</string>
    <string name="running_hdr_timelapse">Running HDR timelapse</string>
    <string name="running_wifi_slave">Running Wi-Fi Slave</string>
    <string name="running_pebble">Running Pebble</string>
    <string name="simple">Tap the big red button to make the magic happen</string>
    <string name="press_hold_text">Touch the button to open the shutter on your camera. To end your exposure just let go</string>
    <string name="press_start_text">Touch the button to open the shutter on your camera. When you’re done, touch it again to end your exposure. Easy!</string>
    <string name="press_to_start">Press to open the shutter and press again to close the shutter</string>
    <string name="timed">Select your favourite shutter speed. Press the button. Relax - the exposure ends when the timer runs down.</string>
    <string name="shutter">shutter</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="time_lapse">Set up a time interval for each shot of your timelapse</string>
    <string name="time_lapse_error">Your timelapse interval is smaller than your pulse length!</string>
    <string name="hours_label">h</string>
    <string name="minutes_label">m</string>
    <string name="seconds_label">s</string>
    <string name="google_play_error_title">Triggertrap uses Google Play Services</string>
    <string name="google_play_error_description">Triggertrap uses Google Play Location services to get location information, you cannot use distance lapse without a valid Google play account or Google Play App installed.</string>
    <string name="connect_error_title">Google Play Services connection error</string>
    <string name="connect_error_description">Triggertrap uses Google Play Services to get you location. We couldn\'t connect. Would you like to try again?</string>
    <string name="triggertrap_idle">Triggertrap is idle</string>
    <string name="in_wifi_slave">In Wi-Fi slave mode we\'re using another Triggertrap Mobile device as a trigger. Connect to the Master device, and wait for the other device to trigger this camera. How cool is that? Press the red button to start searching</string>
    <string name="no_devices_found">NO DEVICES FOUND</string>
    <string name="master_devices">MASTER DEVICES</string>
    <string name="wi_fi_slave">Wi-Fi Slave </string>
    <string name="Connected_to">Connected to: </string>
    <string name="unconnected">UNCONNECTED</string>
    <string name="in_pebble">To install the Triggertrap Pebble app on your watch select \'Install Pebble App\' in the Action menu. In Pebble mode we\'re using a Pebble smartwatch as a trigger. Connect to a Pebble, and wait for the Pebble to trigger this camera. How cool is that? Press the red button to start listening</string>
    <string name="flick_the_switch">Flick the switch to \'on\' to become visible to others running Triggertrap Mobile on your Wi-Fi network. When they connect to your device, you can trigger their cameras wirelessly.</string>
    <string name="connected_slave_devices">CONNECTED SLAVE DEVICES</string>
    <string name="disconnect_slave_device">Disconnect Slave Device</string>
    <string name="do_you_want_to_slave_device">Do you want to disconnect this slave device?</string>
    <string name="running_wifi_master">Running Wi-Fi Master</string>
    <string name="my_name_is">My name is</string>
    <string name="bang">Bang</string>
    <string name="sensitivity">Sensitivity</string>
    <string name="exposures_of_duration">exposures of duration</string>
    <string name="with_a_gap_between">with a gap between each of</string>
    <string name="trigger_the_shutter">Trigger the shutter every</string>
    <string name="meters">meters</string>
    <string name="yards">yards</string>
    <string name="middle_exposure">Middle exposure</string>
    <string name="number_of_exposures">Number of exposures</string>
    <string name="time_lapse_interval">Time Lapse interval</string>
    <string name="ev_step">EV step</string>
    <string name="take">Take</string>
    <string name="exposures_over">exposures over</string>
    <string name="interval_">Interval:</string>
    <string name="start_">Start:</string>
    <string name="end_">End:</string>
    <string name="trigger">Trigger</string>
    <string name="listening_for_pebble_trigger">Listening for Pebble Trigger</string>
    <string name="install_pebble_app">Install Pebble App</string>
	<string name="first_light_at">First light at</string>
    <string name="last_light_at">Last light at</string>
	<string name="hrs">hours</string>
	<string name="hr">hour</string>
	<string name="mins">minutes and</string>
	<string name="min">minute and</string>
	<string name="scnd">second.</string>
	<string name="scnds">seconds.</string>
	<string name="in">in</string>
	<string name="next_sunset">Sunset Tomorrow</string>
	<string name="next_sunrise">Sunrise Tomorrow</string>
	<string name="sunrise">Sunrise Today</string>
	<string name="sunset">Sunset Tonight</string>
	<string name="finding_loc">Finding location…</string>
	<string name="shutter_speed_with">Shutter Speed with</string>
	<string name="sec">sec</string>
	<string name="nd_filter_strength">ND Filter Strength</string>
	<string name="base_shutter_speed">Base Shutter Speed</string>
    <string name="general">GENERAL</string>
    <string name="sensors">SENSORS</string>
    <string name="set_the_trigger_pulse_length">Set the Trigger Pulse length</string>
    <string name="trigger_pulse_length">Trigger Pulse length</string>
    <string name="about">ABOUT</string>
    <string name="version">Version</string>
    <string name="installed_app_verison">Installed app version</string>
    <string name="distance">DISTANCE</string>
    <string name="sensor_reset_delay">Sensor Reset Delay</string>
    <string name="sensor_delay">Sensor Delay</string>
    <string name="speed_unit">Speed Unit</string>
    <string name="distance_unit_s_">Distance Unit(s)</string>
    <string name="kilometers_per_hour">Kilometers per hour</string>
    <string name="meters_kilometers">Meters/Kilometers</string>
    <string name="oh_hi_there">Oh, hi there! Pleased to meet you. </string>
    <string name="so_you_want">So you want to trigger your camera? Good news! You’ve just turned your smartphone or tablet into the best camera triggering device that money can buy. Congratulations on your wise choice.</string>
    <string name="lets_get_started">Let’s get started, shall we?</string>
    <string name="let_s_get_triggering_">Let’s get triggering!!</string>
    <string name="this_is_a_beta_">This is a Beta!</string>
    <string name="you_ve_installed_a_beta_version">You’ve installed a Beta version of our Android app. Which is pretty awesome, because it puts you in the 1% sexiest people in the world category.</string>
    <string name="of_course_given_that_this_is_a">Of course, given that this is a Beta, there may be the odd quirk here and there. If you’d like to help us make the Android app better, please report any bugs and make any suggestions you have on our dedicated Android forum (http://tri.gg/betaforum)\n</string>
    <string name="got_it_awesome_enough_babble_already_">Got it? Awesome. Enough babble already.</string>
    <string name="buy_the_dongle">Buy the Dongle</string>
    <string name="to_connect_the_triggertrap_mobile">To connect the Triggertrap Mobile app to your camera, you’ll need a Triggertrap Mobile Dongle and a connection cable specific to your camera. \n</string>
    <string name="you_can_buy_our_kits">You can buy our kits directly from us or, depending on where you live, it may be available from a camera shop near you. \n</string>
    <string name="to_find_out_exactly">To find out exactly what you’ll need to get up and running, and to place your order, head on over to our shiny red website:\n</string>
    <string name="take_me_there">Take me there</string>
</resources>