<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/tt_vlight_grey"
    android:paddingLeft="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_vertical_margin" >

    <TextView
        android:id="@+id/gettingStartedTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:text="Welcome to Triggertrap"
        android:textColor="@color/tt_dark_red"
        android:textSize="@dimen/text_size_very_large" />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:fillViewport="true"
        android:overScrollMode="never" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/gettingStartedHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:fontFamily="sans-serif-light"
                android:gravity="center"
                android:text="@string/oh_hi_there"
                android:textColor="@color/tt_dark_grey"
                android:textSize="@dimen/text_size_medium" />

            <TextView
                android:id="@+id/gettingStartedBody"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:fontFamily="sans-serif-light"
                android:gravity="center"
                android:text="@string/so_you_want"
                android:textColor="@color/tt_dark_grey"
                android:textSize="@dimen/text_size_medium" />
        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/gettingStartedFooter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_marginBottom="10dp"
        android:fontFamily="sans-serif-light"
        android:gravity="center"
        android:text="@string/lets_get_started"
        android:textColor="@color/tt_dark_red"
        android:textSize="@dimen/text_size_medium" />

    <Button
        android:id="@+id/gettingStartedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dp"
        android:background="@drawable/button_selector"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:text="@string/let_s_get_triggering_"
        android:textColor="@color/tt_dark_grey"
        android:textStyle="bold"
        android:visibility="gone" />

</LinearLayout>